After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 792146 - hlsdemux: fix memory leak while updating master playlist
hlsdemux: fix memory leak while updating master playlist
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-01-03 01:59 UTC by Jun Xie
Modified: 2018-01-16 07:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memory leak while updating master playlist (878 bytes, patch)
2018-01-03 02:08 UTC, Jun Xie
committed Details | Review

Description Jun Xie 2018-01-03 01:59:53 UTC
new_master needs to be freed if current playlist is not a master playlist
Comment 1 Jun Xie 2018-01-03 02:08:34 UTC
Created attachment 366227 [details] [review]
fix memory leak while updating master playlist
Comment 2 Jun Xie 2018-01-16 07:38:58 UTC
please review :)
Comment 3 Edward Hervey 2018-01-16 07:53:13 UTC
Comment on attachment 366227 [details] [review]
fix memory leak while updating master playlist

commit e9240762ed7f6775f085475384da75f01f3fa718 (HEAD -> master, origin/master, origin/HEAD)
Author: Jun Xie <jun.xie@samsung.com>
Date:   Wed Jan 3 10:26:49 2018 +0800

    hlsdemux: fix memory leak while updating master playlist
    
    new_master needs to be freed if current playlist is not a master playlist
    
    https://bugzilla.gnome.org/show_bug.cgi?id=792146