hlsdemux: fix memory leak while updating master playlist

new_master needs to be freed if current playlist is not a master playlist

https://bugzilla.gnome.org/show_bug.cgi?id=792146